tests/errors/ConstraintError/c02.ledger

2016-12-15  Normally Income-account is virtual, and negative
	Assets:Bank	2
	Income

2016-12-15
	Income		3
	Assets:Bank

